# kensan-lab

./: .dockerignore  .gitignore  .yamlfmt  .yamllint  CLAUDE.md  LICENSE  Makefile  README.ja.md  README.md  mkdocs.yml  requirements-docs.txt
apps/kensan/kensan-ai/: .dockerignore  ARCHITECTURE.md  README.md  pyproject.toml
apps/kensan/kensan-ai/scripts/: run_agent_evaluation.py  run_prompt_improvement.py
apps/kensan/kensan-ai/src/kensan_ai/: __init__.py  config.py  errors.py  main.py  telemetry.py
apps/kensan/kensan-ai/src/kensan_ai/agents/: adk_runner.py  base.py  chat.py  gemini_runner.py  message_history.py
apps/kensan/kensan-ai/src/kensan_ai/api/: __init__.py  routes.py
apps/kensan/kensan-ai/src/kensan_ai/batch/: __init__.py  prompt_evaluator.py
apps/kensan/kensan-ai/src/kensan_ai/context/: resolver.py  variable_replacer.py
apps/kensan/kensan-ai/src/kensan_ai/db/queries/: ai_contexts.py  analytics.py  prompt_evaluations.py  (+3 more)
apps/kensan/kensan-ai/src/kensan_ai/embeddings/: __init__.py  service.py
apps/kensan/kensan-ai/src/kensan_ai/indexing/: pipeline.py
apps/kensan/kensan-ai/src/kensan_ai/lakehouse/: reader.py  writer.py
apps/kensan/kensan-ai/src/kensan_ai/lib/: ai_provider.py  llm_utils.py
apps/kensan/kensan-ai/src/kensan_ai/logging/: interaction_logger.py
apps/kensan/kensan-ai/src/kensan_ai/tools/: __init__.py  analytics_tools.py  base.py  memory_tools.py  pattern_tools.py  review_tools.py  web_tools.py
apps/kensan/kensan-ai/tests/: test_chat.py  test_chunker.py  test_config.py  test_errors.py  test_parsers.py  test_telemetry.py  test_variable_replacer.py
apps/kensan/lakehouse/: .env.sample  .gitignore  Makefile  dagster-docker.yaml  docker-compose.dremio.yml  docker-compose.openmetadata.yml  docker-compose.trino.yml  pyproject.toml
apps/kensan/lakehouse/catalog/: bootstrap_polaris.py  config.py
apps/kensan/lakehouse/dagster_project/: __init__.py  resources.py
apps/kensan/lakehouse/dagster_project/assets/: bronze.py  bronze_loki.py  gold.py  maintenance.py  silver.py  silver_emotion.py  silver_explorer.py  silver_tags.py  silver_traits.py
apps/kensan/lakehouse/docs/: architecture-diagram.html  lakehouse-stack-comparison.md
apps/kensan/lakehouse/pipelines/: __init__.py
apps/kensan/lakehouse/pipelines/bronze/: __init__.py
apps/kensan/lakehouse/pipelines/gold/: __init__.py  aggregate.py
apps/kensan/lakehouse/pipelines/maintenance/: prompt_optimization.py  weekly_review.py
apps/kensan/lakehouse/pipelines/silver/: explorer_transform.py  tag_profiler.py  trait_extractor.py
apps/kensan/lakehouse/polaris-config/: application.properties  aws-config
apps/kensan/lakehouse/queries/: query.py
apps/kensan/lakehouse/tests/: test_explorer_transform.py  test_ingest_loki.py  test_reindex_chunks.py
apps/kensan/lakehouse/trino/catalog/: iceberg.properties
backstage/templates/fastapi-template/skeleton/: .gitignore  Makefile  README.md  catalog-info.yaml  pyproject.toml
backstage/templates/fastapi-template/skeleton/manifests/: authz-policy.yaml  servicemonitor.yaml
backstage/templates/fastapi-template/skeleton/tests/: __init__.py  test_main.py
(+1766 files in other folders)
